apps/kube-apps/https-ingress-overnp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeapps
  namespace: kubeapps
  labels:
    app: kubeapps
spec:
  tls:
  - hosts:
      - kubeapps.apps.ocp-jb.vsanpe.vmware.com
    secretName: kubeapps-https-secret
  rules:
    - host: kubeapps.apps.ocp-jb.vsanpe.vmware.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubeapps
              port:
                number: 80
